--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,63 @@
   margin: 0;
   padding: 0;
 }
+
+.self{
+  box-shadow: 0px 0px 1px 1px rgb(0,0,0,0.1);
+  border-radius: 5px;
+  text-align: center;
+  background-color: white;
+}
+.self .img{
+  height: 50px;
+  background-color: #BBDEFB;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+}
+.img>img{
+  margin-top: 15px;
+  height: 65px;
+  width: 65px;
+  border-radius: 50%;
+  background-color: white;
+}
+.info{
+  margin-top: 50px;
+  margin-bottom: 15px;
+}
+.info h1{
+  font-size: 13px;
+  font-weight: 550;
+}
+.info p{
+  font-size: 10px;
+}
+
+.views{
+  display: flex;
+  font-size: 10px;
+  font-weight: bold;
+  padding: 15px;
+  justify-content: space-between;
+}
+.views>.terms{
+  text-align: start;
+}
+.views>.values{
+  color: skyblue;
+}
+.premium{
+  padding: 5px;
+  font-size: 10px;
+}
+.savedItems{
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  font-size: 10px;
+  padding: 10px;
+}
+
+/* .layout{
+  background-color: #e3e3e3;
+} */
